# llm-monitor

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: SPEC.md
docs/research/: ollama-v0.7.0-research.md
skills/: llm-monitor.md  openclaw.md
src/clawmeter/: __init__.py  __main__.py  cache.py  cli.py  config.py  core.py  daemon.py  history.py  migrate.py  models.py  security.py
src/clawmeter/formatters/: __init__.py  json_fmt.py  monitor_fmt.py  table_fmt.py
src/clawmeter/providers/: __init__.py  base.py  claude.py  grok.py  ollama.py  openai.py
src/llm_monitor/: __init__.py  __main__.py  _version.py  cache.py  cli.py  config.py  core.py  daemon.py  history.py  models.py  security.py
src/llm_monitor/formatters/: __init__.py  json_fmt.py  monitor_fmt.py  table_fmt.py
src/llm_monitor/providers/: __init__.py  base.py  claude.py  grok.py  ollama.py  openai.py
tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_daemon.py  test_history.py  test_models.py  test_security.py
tests/fixtures/: claude_credentials.json  claude_usage_response.json  config_full.toml  grok_invoice_preview.json  grok_prepaid_balance.json  grok_spending_limits.json  grok_usage_analytics.json  ollama_cloud_usage.json  ollama_ps.json  ollama_ps_cpu_only.json  ollama_tags.json  openai_costs.json  openai_usage_completions.json
tests/formatters/: test_json_fmt.py  test_monitor_fmt.py  test_table_fmt.py
tests/providers/: test_base.py  test_claude.py  test_grok.py  test_ollama.py  test_ollama_cloud.py  test_openai.py
