[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "clawmeter"
dynamic = ["version"]
description = "Monitor LLM service usage across providers from the CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Daniel Thomas" },
]
keywords = ["llm", "monitoring", "claude", "openai", "ollama", "usage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.0",
    "keyring>=25.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
local = [
    "psutil>=5.9",
    "pynvml>=11.5",
]
gtk = [
    "PyGObject>=3.42",
]
all = [
    "clawmeter[local,gtk]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
clawmeter = "clawmeter.__main__:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/clawmeter/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/clawmeter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
